--- a/style.css
+++ b/style.css
@@ -759,8 +759,8 @@ body {
 
 .titleNew {
   font-size: 1.3rem;
-  font-weight: 600;
-  color: #35e67b;
+  font-weight: 800;
+  color: #00c6ff;
   margin-bottom: 12px;
 }
 
